# NeuronRobotInterface

catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/devel/include/arm/: cartesian_move.h  cartesian_moves.h  constant_move.h  constant_move_time.h
catkin_ws/devel/include/burst_calc/: burst.h  ca.h  cat.h  ranges.h
catkin_ws/devel/include/img_slicer/: ImageSlicer.h  ImageSlicerRequest.h  ImageSlicerResponse.h
catkin_ws/devel/include/neuro_recv/: dish_state.h
catkin_ws/devel/include/time_server/: time_srv.h  time_srvRequest.h  time_srvResponse.h
catkin_ws/devel/include/zanni/: Channels.h  Stim.h  StimRequest.h  StimResponse.h
catkin_ws/devel/lib/arm/: arm_control  teleop_arm_dish  teleop_arm_key
catkin_ws/devel/lib/burst_calc/: burst_creator  cat_creator
catkin_ws/devel/lib/dish_viz/: dish_viz
catkin_ws/devel/lib/humbucker/: humbucker
catkin_ws/devel/lib/img_slicer/: img_slicer  slicer_test  zanni_slices
catkin_ws/devel/lib/neuro_recv/: csv_recv  mock_recv  net_recv
catkin_ws/devel/lib/pkgconfig/: activation_vector.pc  arm.pc  burst_calc.pc  dish_viz.pc  humbucker.pc  img_slicer.pc  interact_sim.pc  neuro_recv.pc  practical_socket.pc  time_server.pc  volt_distr.pc  zanni.pc
catkin_ws/devel/lib/time_server/: time_server
catkin_ws/devel/lib/volt_distr/: volt_distr
catkin_ws/devel/lib/zanni/: zanni  zanni_fake  zanni_listener  zanni_stim_client  zanni_stim_server  zanni_translate
catkin_ws/devel/share/activation_vector/cmake/: activation_vectorConfig.cmake
catkin_ws/devel/share/arm/cmake/: arm-msg-extras.cmake  arm-msg-paths.cmake  armConfig.cmake
catkin_ws/devel/share/burst_calc/cmake/: burst_calc-msg-paths.cmake  burst_calcConfig.cmake
catkin_ws/devel/share/dish_viz/cmake/: dish_vizConfig.cmake
catkin_ws/devel/share/humbucker/cmake/: humbuckerConfig.cmake
catkin_ws/devel/share/zanni/cmake/: zanniConfig.cmake  (+2 more)
catkin_ws/src/activation_vector/: CMakeLists.txt  package.xml
catkin_ws/src/activation_vector/include/act_vector/: act_vector.h
catkin_ws/src/activation_vector/src/: act_vector.cpp
catkin_ws/src/arm/: CMakeLists.txt  launch_all.launch  launch_hax.launch  package.xml  record.launch
catkin_ws/src/arm/act_vector/: CMakeLists.txt  manifest.xml
catkin_ws/src/arm/act_vector/include/act_vector/: act_vector.h
catkin_ws/src/arm/act_vector/src/: act_vector.cpp
catkin_ws/src/arm/arm/: manifest.xml
catkin_ws/src/arm/arm/launch/: csv.yaml  csv_hax.yaml  keyboard.yaml
catkin_ws/src/arm/arm/src/arm/msg/: __init__.py
catkin_ws/src/arm/burst_calc/: manifest.xml
catkin_ws/src/arm/burst_calc/src/: burst_creator.cpp
catkin_ws/src/arm/img_slicer/: CMakeLists.txt  manifest.xml
catkin_ws/src/arm/img_slicer/src/: slicerTest.cpp  slicerToZanni.cpp
catkin_ws/src/arm/img_slicer/src/img_slicer/srv/: _ImageSlicer.py  _SlicerService.py  __init__.py
catkin_ws/src/arm/img_slicer/srv/: ImageSlicer.srv
catkin_ws/src/arm/include/: arm_control.h
catkin_ws/src/arm/msg/: constant_move.msg
catkin_ws/src/arm/neuro_recv/: CMakeLists.txt
catkin_ws/src/arm/neuro_recv/src/: net_recv.cpp
catkin_ws/src/arm/src/: ManusArm.cpp  arm_control.cpp  teleop_arm_dish.cpp  teleop_arm_key.cpp
catkin_ws/src/burst_calc/: CMakeLists.txt  package.xml
catkin_ws/src/burst_calc/src/: burst_merger.cpp
catkin_ws/src/dish_viz/: CMakeLists.txt  package.xml
catkin_ws/src/humbucker/: CMakeLists.txt
catkin_ws/src/humbucker/include/humbucker/: humbucker.h
catkin_ws/src/humbucker/src/: humbucker.cpp
catkin_ws/src/img_slicer/: CMakeLists.txt  package.xml
catkin_ws/src/img_slicer/src/: ImageSlicer.cpp  slicerTest.cpp  slicerToZanni.cpp
catkin_ws/src/interact_sim/: CMakeLists.txt  package.xml
catkin_ws/src/interact_sim/src/: InteractClient.py  RunInteractive.py  StimData.py
catkin_ws/src/neuro_recv/: CMakeLists.txt  package.xml
catkin_ws/src/neuro_recv/src/: mock_recv.cpp  net_recv.cpp
catkin_ws/src/neuron_control/: README  package.xml
catkin_ws/src/pattern_rec/: CMakeLists.txt  package.xml
catkin_ws/src/pattern_rec/src/: pattern_rec.cpp
catkin_ws/src/practical_socket/: CMakeLists.txt
catkin_ws/src/practical_socket/src/: PracticalSocket.cpp
catkin_ws/src/time_server/: CMakeLists.txt  package.xml
catkin_ws/src/volt_distr/: CMakeLists.txt  package.xml
catkin_ws/src/zanni/: CMakeLists.txt  package.xml  zanni_test.launch
catkin_ws/src/zanni/msg/: Channels.msg
catkin_ws/src/zanni/src/: lvm_to_dishstate.cpp  sine.hpp  zanni.cpp  zanni_listener.cpp  zanni_stim.cpp  zanni_stim_client.cpp  zanni_to_dishstate.cpp
catkin_ws/src/zanni/srv/: Stim.srv
common/: PhysicalDish.py  data_loader.py  labviewloader.py  lvmheader.py  plotdish.py  spike_detector.py
data_files/arm_and_cup/: 2014-01-30-13-35-18-vid445_cup.csv  2014-01-30-13-35-18-vid445_overall.csv  2014-01-30-13-40-49-vid446_cup.csv  2014-01-30-13-40-49-vid446_overall.csv
data_processing/: PCA_attempt.py  assessClustering.py  check_actions.py  collect_clusterings.sh  csv_to_lvm.py  mean-shift_test.py  minmaxcluster.py  moves_vs_sim_stim.py  overall_moves.py  spike_rates.py  split_records.py  testrun.sh  zanni_to_lvm.py  zero_mean_unit_norm.py
data_processing/exponent_metrics/: burst_checker.py  gather_values.py  graph_analysis.py  metrics.py  postProcess.sh  spike_detector.py
documentation/: Notes.txt  board_doc.txt  mea_wiring.csv
documentation/aaai-robotics-2014-paper/AuthorKit/: workshop-paper.bib  workshop-paper.tex
launchfiles/: dummy.yaml  dummy_loop.launch  full_loop.yaml  full_loop_ARM_side.launch  full_loop_with_humbucker.launch  hax_launcher.sh  interactive_loop.launch  keyboard.launch  pattern_rec_test.launch
plating_simulator/: MeaRunner.py  PhysicalDish.py  SeedMea.py  basic_sim.cfg  micropattern.cfg
plating_simulator/utilities/: divide_culture.py
test_scribbles/: gen_chan_list.py  network_operation_brian.py
visualization/: cup_moves.py  dishwide_histogram.py  dishwide_voltage.py  lvm_cross-correlation.py  lvm_to_spikes.py  lvm_voltage_graph.py  neuron_types.py  plot_frequency.m
(+69 files in other folders)
