<?xml version="1.0"?>
<package>
  <name>arm</name>
  <version>0.0.0</version>
  <description>The arm package</description>

  <maintainer email="orphrey@gmail.com">Abraham Shultz</maintainer>

  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/arm</url> -->

  <author email="orphrey@gmail.com">Abraham Shultz</author>
  <author email="jhasenzahl@worcester.edu">Jonathan Hasenzahl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>time_server</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
