<?xml version="1.0"?>
<package>
  <name>burst_calc</name>
  <version>0.0.0</version>
  <description>The burst_calc package</description>

  <maintainer email="orphrey@gmail.com">ams</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>neuro_recv</build_depend>
  <build_depend>time_server</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>   

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
