<?xml version="1.0"?>
<package>
  <name>volt_distr</name>
  <version>0.0.0</version>
  <description>The volt_distr package</description>

  <maintainer email="orphrey@gmail.com">ams</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>neuro_recv</build_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
